<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Dashboard"
    android:orientation="vertical"
    android:background="@drawable/bcgdashboard"
    tools:showIn="@layout/app_bar_dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/hiace"
        android:layout_gravity="top">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:paddingRight="25dp"
            android:paddingBottom="10dp"
            android:scaleType="fitEnd"
            android:src="@drawable/applogo1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorPrimary"
                android:layout_weight="1"
                android:layout_marginRight="0.8dp"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/bookTicket"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorPrimary"
                android:layout_weight="1"
                android:text="@string/book_ticket"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/bookStatus"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorPrimary"
                android:layout_weight="1"
                android:layout_marginRight="0.8dp"
                android:layout_marginTop="0.8dp"
                android:text="@string/booking_status"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/reschedule"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorPrimary"
                android:layout_weight="1"
                android:layout_marginTop="0.8dp"
                android:text="@string/re_schedule"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="14sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>